k8s/deployment_script.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: football-service-deployment
  labels:
    run: football-service
spec:
  replicas: 2
  selector:
    matchLabels:
      run: football-service
  template:
    metadata:
      labels:
        run: football-service
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: football-service-config
      containers:
        - name: football-service
          image: visheshawasthi/football-service-with-jib
          imagePullPolicy: Always
#          resources:
#            requests:
#              memory: "64Mi"
#              cpu: "250m"
#            limits:
#              memory: "128Mi"
#              cpu: "300m"
          ports:
            - containerPort: 8080
              protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: football-service
spec:
  selector:
    run: football-service
  ports:
    - name: port1
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
